# bklit-ui

./: .biomeignore  .env.example  .gitignore  AGENTS.md  LICENSE-STUDIO.md  README.md  biome.jsonc  llms.txt  package.json  pnpm-lock.yaml  turbo.json
.agents/skills/bklit-playground/: SKILL.md
.agents/skills/bklit-ship/: SKILL.md
.agents/skills/bklit-ui/: SKILL.md
.agents/skills/unit-tests/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE_CANDLESTICK.md  PULL_REQUEST_TEMPLATE_LIVELINE.md
.github/workflows/: lint.yml  registry.yml
apps/studio-desktop/: eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
apps/studio-desktop/src/: app.tsx  index.css  main.tsx
apps/studio-desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/studio-desktop/src-tauri/capabilities/: default.json
apps/studio-desktop/src-tauri/icons/: icon.icns
apps/studio-desktop/src-tauri/src/: lib.rs  main.rs
apps/studio-docs/: .gitignore  README.md  eslint.config.js  next.config.mjs  package.json  source.config.ts  tsconfig.json
apps/studio-docs/app/: globals.css  layout.tsx
apps/studio-docs/components/: catalog-source-menu.tsx  component-showcase.tsx  docs-layout.tsx  docs-scroll-area.tsx  docs-search-trigger.tsx  docs-toolbar.tsx  highlighted-code-block.tsx  icons-catalog.tsx  icons-page-content.tsx  mode-toggle.tsx  page-footer.tsx  toc.tsx  (+4 more)
apps/web/: .env.example  .gitignore  components.json  eslint.config.js  middleware.ts  next.config.mjs  package.json  source.config.ts  tsconfig.json
scripts/: generate-llms.mjs
wiki/: llms-full.txt  llms.txt
(+506 files in other folders)
